Multiple fixes to endpoints. Fixed CORS.
