# docs/swagger.json
@@ -68,7 +68,7 @@
                 "tags": [
                     "SellerToService"
                 ],
-                "summary": "Fetches all Services that belong to the speicfied Seller.",
+                "summary": "Fetches all Seller-Service connections.",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -157,11 +157,11 @@
                 "tags": [
                     "SellerToService"
                 ],
-                "summary": "Fetches a specific Seller-Service connection.",
+                "summary": "Fetches all Services that belong to the speicfied Seller.",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "Sellers-Services ID",
+                        "type": "string",
+                        "description": "Seller ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -207,13 +207,11 @@
                 "summary": "Deletes a specified Seller-Service connection.",
                 "parameters": [
                     {
-                        "description": "Delete Selllers-Services",
-                        "name": "SellerToService",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/db.SellerToService"
-                        }
+                        "type": "string",
+                        "description": "Delete Sellers-Services",
+                        "name": "service_id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -347,60 +345,11 @@
                 "summary": "Fetches a specific seller.",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "Seller ID",
                         "name": "id",
                         "in": "path",
                         "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/server.ResponseHTTP"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/definitions/db.Seller"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/server.ResponseHTTP"
-                        }
-                    }
-                }
-            },
-            "put": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Sellers"
-                ],
-                "summary": "Updates an existing seller.",
-                "parameters": [
-                    {
-                        "description": "Update Seller",
-                        "name": "Service",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/db.Service"
-                        }
                     }
                 ],
                 "responses": {
@@ -443,11 +392,60 @@
                 "summary": "Deletes a specified seller.",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "Delete Seller",
                         "name": "id",
                         "in": "path",
                         "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/server.ResponseHTTP"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/db.Seller"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/server.ResponseHTTP"
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Sellers"
+                ],
+                "summary": "Updates an existing seller.",
+                "parameters": [
+                    {
+                        "description": "Update Seller",
+                        "name": "Seller",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/db.Seller"
+                        }
                     }
                 ],
                 "responses": {
@@ -581,60 +579,11 @@
                 "summary": "Fetches a specific service.",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "Service ID",
                         "name": "id",
                         "in": "path",
                         "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/server.ResponseHTTP"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "$ref": "#/definitions/db.Service"
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/server.ResponseHTTP"
-                        }
-                    }
-                }
-            },
-            "put": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Services"
-                ],
-                "summary": "Updates an existing service.",
-                "parameters": [
-                    {
-                        "description": "Update Service",
-                        "name": "Service",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/db.Service"
-                        }
                     }
                 ],
                 "responses": {
@@ -677,11 +626,60 @@
                 "summary": "Deletes a specified service.",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "Delete Service",
                         "name": "id",
                         "in": "path",
                         "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/server.ResponseHTTP"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/db.Service"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/server.ResponseHTTP"
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Services"
+                ],
+                "summary": "Updates an existing service.",
+                "parameters": [
+                    {
+                        "description": "Update Service",
+                        "name": "Service",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/db.Service"
+                        }
                     }
                 ],
                 "responses": {
